--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
 
     <!-- header/ end-->
 
+    <br>
+    <!-- Section 1 -->
+    <section id="section-1">
+        <div class="container-section1">
+            <img class="imgYugi" src="public/img/Yugi.png">
+            <h1>Duel Kingdom </h1>
+            <div class="container-img"><img src="public/img/linea.png"></div>
+            <h3>Power / Strategy / Consistency</h3>
+        </div>
+    </section>
+    <!-- Section 1/ end-->
+
 
 
     <!--bootstrap, jquery and popper-->
