LP-008 Portfolio section

--- a/index.html
+++ b/index.html
@@ -43,6 +43,167 @@
         </div>
     </section>
     <!-- Section 1/ end-->
+    <!-- Types section -->
+    <section id="types-section">
+        <div class="container">
+            <div class="types-title-box">
+                <h2 class="title text-center display-4 pt-5">Card Types</h2>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="types-item mx-auto">
+                        <div class="types-item-box d-flex align-items-center justify-content-center h-100 w-100" onclick="showTopic(1)">
+                            <div class="text-center color-white">
+                                <h3>Dark</h3>
+                            </div>
+                        </div>
+                        <img src="public/img/1.png" class="img-fluid types-img">
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4" onclick="showTopic(2)">
+                    <div class="types-item mx-auto">
+                        <div class="types-item-box d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="text-center color-white">
+                                <h3>Light</h3>
+                            </div>
+                        </div>
+                        <img src="public/img/2.png" class="img-fluid types-img">
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4" onclick="showTopic(3)">
+                    <div class="types-item mx-auto">
+                        <div class="types-item-box d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="text-center color-white">
+                                <h3>Wind</h3>
+                            </div>
+                        </div>
+                        <img src="public/img/3.png" class="img-fluid types-img">
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="types-item mx-auto" onclick="showTopic(4)">
+                        <div class="types-item-box d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="text-center color-white">
+                                <h3>Earth</h3>
+                            </div>
+                        </div>
+                        <img src="public/img/4.png" class="img-fluid types-img">
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="types-item mx-auto" onclick="showTopic(5)">
+                        <div class="types-item-box d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="text-center color-white">
+                                <h3>Fire</h3>
+                            </div>
+                        </div>
+                        <img src="public/img/5.png" class="img-fluid types-img">
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="types-item mx-auto" onclick="showTopic(6)">
+                        <div class="types-item-box d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="text-center color-white">
+                                <h3>Water</h3>
+                            </div>
+                        </div>
+                        <img src="public/img/6.png" class="img-fluid types-img">
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="types-item mx-auto" onclick="showTopic(7)">
+                        <div class="types-item-box d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="text-center color-white">
+                                <h3>Divine</h3>
+                            </div>
+                        </div>
+                        <img src="public/img/7.png" class="img-fluid types-img">
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="types-item mx-auto" onclick="showTopic(8)">
+                        <div class="types-item-box d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="text-center color-white">
+                                <h3>Spell</h3>
+                            </div>
+                        </div>
+                        <img src="public/img/8.png" class="img-fluid types-img">
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="types-item mx-auto" onclick="showTopic(9)">
+                        <div class="types-item-box d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="text-center color-white">
+                                <h3>Trap</h3>
+                            </div>
+                        </div>
+                        <img src="public/img/9.png" class="img-fluid types-img">
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="types-item mx-auto" onclick="showTopic(10)">
+                        <div class="types-item-box d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="text-center color-white">
+                                <h3>Continous</h3>
+                            </div>
+                        </div>
+                        <img src="public/img/10.png" class="img-fluid types-img">
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="types-item mx-auto" onclick="showTopic(11)">
+                        <div class="types-item-box d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="text-center color-white">
+                                <h3>Field</h3>
+                            </div>
+                        </div>
+                        <img src="public/img/11.png" class="img-fluid types-img">
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="types-item mx-auto" onclick="showTopic(12)">
+                        <div class="types-item-box d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="text-center color-white">
+                                <h3>Equip</h3>
+                            </div>
+                        </div>
+                        <img src="public/img/12.png" class="img-fluid types-img">
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="types-item mx-auto" onclick="showTopic(13)">
+                        <div class="types-item-box d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="text-center color-white">
+                                <h3>Counter</h3>
+                            </div>
+                        </div>
+                        <img src="public/img/13.png" class="img-fluid types-img">
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="types-item mx-auto" onclick="showTopic(14)">
+                        <div class="types-item-box d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="text-center color-white">
+                                <h3>Ritual</h3>
+                            </div>
+                        </div>
+                        <img src="public/img/14.png" class="img-fluid types-img">
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="types-item mx-auto" onclick="showTopic(15)">
+                        <div class="types-item-box d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="text-center color-white">
+                                <h3>Quick</h3>
+                            </div>
+                        </div>
+                        <img src="public/img/15.png" class="img-fluid types-img">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Types section / end-->
 
 
 
