--- a/index.html
+++ b/index.html
@@ -204,6 +204,40 @@
         </div>
     </section>
     <!-- Types section / end-->
+    </main>
+
+    <!-- Modal window -->
+    <div class="modal fade" tabindex="-1" role="dialog" id="topicModal">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+                <div class="closeButton1">
+                    <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="container">
+                        <div class="mb-5">
+                            <h1 class="modal-title" id="topicLabel">
+                                </p>
+                        </div>
+                        <div class="mb-5">
+                            <img src="public/img/1.png" class="img-fluid" id="topicImage">
+                        </div>
+                        <div class="mb-5">
+                            <p class="m-0" id="topicText"></p>
+                        </div>
+                        <div class="closeButton2 mb-5">
+                            <button type="button" class="btn btn-dark btn-lg " data-dismiss="modal">
+                                    <span aria-hidden="true">&times;</span>Close
+                                </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- MODAL / end -->
 
 
 
