--- a/index.html
+++ b/index.html
@@ -252,6 +252,43 @@
         </div>
     </section>
     <!-- ABOUT SECTION /END -->
+    <!-- CONTACT SECTION-->
+    <section id="contact-section">
+        <div class="container">
+            <br class="contact-title-box">
+            <div></div>
+            <h2 class="title text-center display-4">CONTACT ME</h2>
+            <form class="needs-validation" novalidate>
+                <div class="form-group">
+                    <label>Name</label>
+                    <input class="form-control" type="text" placeholder="Name" id="name" required>
+                    <div class="invalid-feedback">Please enter your name</div>
+                </div>
+                <div class="form-group">
+                    <label>Email</label>
+                    <input class="form-control" type="email" placeholder="Email Adress" id="emailAdress" required>
+                    <div class="invalid-feedback">Please enter your email</div>
+                </div>
+                <div class="form-group">
+                    <label>Phone Number</label>
+                    <input class="form-control" type="number" placeholder="Phone Number" id="phoneNumber" required>
+                    <div class="invalid-feedback">Please enter your phone number</div>
+                </div>
+                <div class="form-group">
+                    <label>Message</label>
+                    <textarea class="form-control" type="text" placeholder="Message" id="message" required></textarea>
+                    <div class="invalid-feedback">Please enter your message</div>
+                </div>
+
+                <div>
+                    <Button class="btn btn-dark btn-lg btn-block contact-button" type="submit" id="sendMessageButton">Send</button>
+                </div>
+
+            </form>
+        </div>
+        </div>
+    </section>
+    <!--CONTACT / END-->
 
 
 
