--- a/index.html
+++ b/index.html
@@ -244,11 +244,8 @@
         <div class="about-line"></div>
         <div class="about-data mx-4 text-justify mx-auto">
             <div class="about-datam">Yu-Gi-Oh! tells the tale of Yugi Mutou, a timid young boy who loves all sorts of games, but is often bullied around. One day, he solves an ancient puzzle known as the Millennium Puzzle (千年パズル, Sennen Pazuru), causing his body to play host
-                to a mysterious spirit with the personality of a gambler. From that moment onwards, whenever Yugi or one of his friends is threatened by those with darkness in their hearts, this other Yugi shows himself and challenges them to dangerous
-                Shadow Games (闇のゲーム, Yami no Gēmu, lit. "Games of Darkness") which reveal the true nature of someone's heart, the losers of these contests often being subjected to a dark punishment called a Penalty Game (罰ゲーム, Batsu Gēmu). Whether it
-                be cards, dice, or role-playing board games, he will take on challenges from anyone, anywhere. As the series progresses, Yugi and his friends learn that this person inside of his puzzle is actually the spirit of a nameless Pharaoh from
-                Ancient Egyptian times, who had lost his memories. As Yugi and his companions attempt to help the Pharaoh regain his memories, they find themselves going through many trials as they wager their lives facing off against gamers that wield
-                the mysterious Millennium Items (千年アイテム, Sennen Aitemu) and the dark power of the Shadow Games.</div>
+                to a mysterious spirit with the personality of a gambler. he will take on challenges from anyone, anywhere. As the series progresses, Yugi and his friends learn that this person inside of his puzzle is actually the spirit of a nameless
+                Pharaoh from Ancient Egyptian times, who had lost his memories.</div>
         </div>
     </section>
     <!-- ABOUT SECTION /END -->
@@ -257,6 +254,7 @@
         <div class="container">
             <br class="contact-title-box">
             <div></div>
+            <br>
             <h2 class="title text-center display-4">CONTACT ME</h2>
             <form class="needs-validation" novalidate>
                 <div class="form-group">
@@ -289,6 +287,55 @@
         </div>
     </section>
     <!--CONTACT / END-->
+    <!--FOOTER -->
+    <footer class="footer-distributed">
+
+        <div class="footer-left">
+            <img src="public/img/hex.png">
+            <h3>About <span> Duel Kingdom</span></h3>
+
+            <p class="footer-links">
+                <a href="#types-section">Types</a> |
+                <a href="#about-section">About</a> |
+                <a href="#contact-section">Contact</a>
+            </p>
+        </div>
+
+
+        <div class="footer-center">
+            <div>
+                <i class="fa fa-map-marker"></i>
+                <p><span>
+                    2381 Rosecrans Ave #200, El Segundo, CA 90245</span> United States</p>
+            </div>
+
+            <div>
+                <i class="fa fa-phone"></i>
+                <p>(650) 288-3150 </p>
+            </div>
+            <div>
+                <i class="fa fa-envelope"></i>
+                <p><a href="mailto:avargas@unitedvirtualities.com">konami@gmail.com</a></p>
+            </div>
+        </div>
+        <div class="footer-right">
+            <p class="footer-company-about">
+                <span>About the company</span> &copy;2020 Konami Digital Entertainment.</p>
+            <div class="footer-icons">
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="#"><i class="fa fa-youtube"></i></a>
+            </div>
+        </div>
+
+        <div class="footer-down">
+            <p class="footer-company-name">© 2020 Alexis Ivan Vargas Partida</p>
+        </div>
+    </footer>
+    <!--FOOTER / END -->
+
 
 
 
